tests/baselines/reference/methodsReturningThis.types
=== tests/cases/conformance/salsa/input.js ===
function Class()
>Class : () => void
{
}

// error: 'Class' doesn't have property 'notPresent'
Class.prototype.containsError = function () { return this.notPresent; };
>Class.prototype.containsError = function () { return this.notPresent; } : () => any
>Class.prototype.containsError : any
>Class.prototype : any
>Class : () => void
>prototype : any
>containsError : any
>function () { return this.notPresent; } : () => any
>this.notPresent : any
>this : object
>notPresent : any

// lots of methods that return this, which caused out-of-memory in #9527
Class.prototype.m1 = function (a, b, c, d, tx, ty) { return this; };
>Class.prototype.m1 = function (a, b, c, d, tx, ty) { return this; } : (a: any, b: any, c: any, d: any, tx: any, ty: any) => object
>Class.prototype.m1 : any
>Class.prototype : any
>Class : () => void
>prototype : any
>m1 : any
>function (a, b, c, d, tx, ty) { return this; } : (a: any, b: any, c: any, d: any, tx: any, ty: any) => object
>a : any
>b : any
>c : any
>d : any
>tx : any
>ty : any
>this : object

Class.prototype.m2 = function (x, y) { return this; };
>Class.prototype.m2 = function (x, y) { return this; } : (x: any, y: any) => object
>Class.prototype.m2 : any
>Class.prototype : any
>Class : () => void
>prototype : any
>m2 : any
>function (x, y) { return this; } : (x: any, y: any) => object
>x : any
>y : any
>this : object

Class.prototype.m3 = function (x, y) { return this; };
>Class.prototype.m3 = function (x, y) { return this; } : (x: any, y: any) => object
>Class.prototype.m3 : any
>Class.prototype : any
>Class : () => void
>prototype : any
>m3 : any
>function (x, y) { return this; } : (x: any, y: any) => object
>x : any
>y : any
>this : object

Class.prototype.m4 = function (angle) { return this; };
>Class.prototype.m4 = function (angle) { return this; } : (angle: any) => object
>Class.prototype.m4 : any
>Class.prototype : any
>Class : () => void
>prototype : any
>m4 : any
>function (angle) { return this; } : (angle: any) => object
>angle : any
>this : object

Class.prototype.m5 = function (matrix) { return this; };
>Class.prototype.m5 = function (matrix) { return this; } : (matrix: any) => object
>Class.prototype.m5 : any
>Class.prototype : any
>Class : () => void
>prototype : any
>m5 : any
>function (matrix) { return this; } : (matrix: any) => object
>matrix : any
>this : object

Class.prototype.m6 = function (x, y, pivotX, pivotY, scaleX, scaleY, rotation, skewX, skewY) { return this; };
>Class.prototype.m6 = function (x, y, pivotX, pivotY, scaleX, scaleY, rotation, skewX, skewY) { return this; } : (x: any, y: any, pivotX: any, pivotY: any, scaleX: any, scaleY: any, rotation: any, skewX: any, skewY: any) => object
>Class.prototype.m6 : any
>Class.prototype : any
>Class : () => void
>prototype : any
>m6 : any
>function (x, y, pivotX, pivotY, scaleX, scaleY, rotation, skewX, skewY) { return this; } : (x: any, y: any, pivotX: any, pivotY: any, scaleX: any, scaleY: any, rotation: any, skewX: any, skewY: any) => object
>x : any
>y : any
>pivotX : any
>pivotY : any
>scaleX : any
>scaleY : any
>rotation : any
>skewX : any
>skewY : any
>this : object

Class.prototype.m7 = function(matrix) { return this; };
>Class.prototype.m7 = function(matrix) { return this; } : (matrix: any) => object
>Class.prototype.m7 : any
>Class.prototype : any
>Class : () => void
>prototype : any
>m7 : any
>function(matrix) { return this; } : (matrix: any) => object
>matrix : any
>this : object

Class.prototype.m8 = function() { return this; };
>Class.prototype.m8 = function() { return this; } : () => object
>Class.prototype.m8 : any
>Class.prototype : any
>Class : () => void
>prototype : any
>m8 : any
>function() { return this; } : () => object
>this : object

Class.prototype.m9 = function () { return this; };
>Class.prototype.m9 = function () { return this; } : () => object
>Class.prototype.m9 : any
>Class.prototype : any
>Class : () => void
>prototype : any
>m9 : any
>function () { return this; } : () => object
>this : object


